cinema form done

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,4 +5,5 @@
 <!-- <app-feedback></app-feedback> -->
 <!-- <app-vendor-form></app-vendor-form> -->
 <!-- <app-vendor-form></app-vendor-form> -->
-<app-movie-form></app-movie-form>
+<!-- <app-movie-form></app-movie-form> -->
+<app-cinema-form></app-cinema-form>
