--- a/src/app/components/form/cinema-form/cinema-form.component.html
+++ b/src/app/components/form/cinema-form/cinema-form.component.html
@@ -1,3 +1,196 @@
-<p>
-  cinema-form works!
-</p>
+<div class="body">
+  <div
+    class="container"
+    style="
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      color: #11435a;
+      position: relative;
+      width: 100%;
+      max-width: 700px;
+      background: rgba(255, 255, 255, 0.8);
+      padding: 30px;
+      border-radius: 8px;
+      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+    "
+  >
+    <form
+      [formGroup]="cinemaForm"
+      (ngSubmit)="submitCinemaForm(cinemaForm)"
+      class="row g-3"
+    >
+      <div class="container">
+        <div
+          class="profile_img"
+          style="justify-content: center; align-items: center; display: flex"
+        >
+          <img
+            src="../../../../assets/imgs/movie.jpeg"
+            alt=""
+            class="img-fluid shadow"
+            style="
+              position: relative;
+              border-radius: 50%;
+              width: 70px;
+              justify-content: center;
+            "
+          />
+        </div>
+      </div>
+      <h2 style="display: flex; justify-content: center">Add Cinema</h2>
+      <div class="col-md-6">
+        <label for="name" class="form-label">Cinema Name</label>
+        <input
+          type="text"
+          class="form-control"
+          id="name"
+          placeholder="e.g. VFox"
+          formControlName="name"
+        />
+        <div
+          class="alert alert-danger"
+          *ngIf="
+            cinemaForm.get('name')?.errors && cinemaForm.get('name')?.touched
+          "
+          style="
+            height: max-content;
+            min-height: 30px;
+            max-height: 100px;
+            margin-top: 3px;
+            padding-top: 4px;
+            padding-bottom: 0px;
+            overflow: none;
+            color: #666;
+          "
+        >
+          <p *ngIf="cinemaForm.get('name')?.getError('required')">
+            Cinema title is required
+          </p>
+        </div>
+      </div>
+      <div class="col-md-3">
+        <label for="city" class="form-label">City</label>
+        <input
+          type="text"
+          class="form-control"
+          id="city"
+          placeholder="e.g. Cairo"
+          formControlName="city"
+        />
+        <div
+          class="alert alert-danger"
+          *ngIf="
+            cinemaForm.get('city')?.errors && cinemaForm.get('city')?.touched
+          "
+          style="
+            height: max-content;
+            min-height: 30px;
+            max-height: 100px;
+            margin-top: 3px;
+            padding-top: 4px;
+            padding-bottom: 0px;
+            overflow: none;
+            color: #666;
+          "
+        >
+          <p *ngIf="cinemaForm.get('city')?.getError('required')">
+            City is required
+          </p>
+        </div>
+      </div>
+      <div class="col-md-3">
+        <label for="halls" class="form-label">No. of Halls</label>
+        <input
+          type="number"
+          class="form-control"
+          id="halls"
+          placeholder="e.g. 5"
+          formControlName="halls"
+        />
+        <div
+          class="alert alert-danger"
+          *ngIf="
+            cinemaForm.get('halls')?.errors && cinemaForm.get('halls')?.touched
+          "
+          style="
+            height: max-content;
+            min-height: 30px;
+            max-height: 100px;
+            margin-top: 3px;
+            padding-top: 4px;
+            padding-bottom: 0px;
+            overflow: none;
+            color: #666;
+          "
+        >
+          <p *ngIf="cinemaForm.get('halls')?.getError('required')">
+            Halls required
+          </p>
+        </div>
+      </div>
+      <div class="col-md-6">
+        <button
+          type="submit"
+          class="btn"
+          [disabled]="cinemaForm.invalid"
+          (click)="displayLoader()"
+        >
+          <span *ngIf="!showLoader">Submit</span>
+          <div style="justify-content: center; display: flex">
+            <mat-spinner
+              style="width: 3em; height: 2em"
+              *ngIf="showLoader"
+            ></mat-spinner>
+          </div>
+        </button>
+      </div>
+      <div class="col-md-6">
+        <button type="reset" class="btn reset" (click)="displayResetLoader()">
+          <span *ngIf="!showResetLoader">Reset</span>
+          <div style="justify-content: center; display: flex">
+            <mat-spinner
+              style="width: 3em; height: 2em"
+              *ngIf="showResetLoader"
+            ></mat-spinner>
+          </div>
+        </button>
+      </div>
+      <div class="col-md-12">
+        <google-map
+          height="400px"
+          width="100%"
+          [zoom]="zoom"
+          [center]="center"
+          [options]="options"
+          (mapClick)="handleMapClick($event)"
+          formControlName="location"
+        >
+          <map-advanced-marker
+            #markerElem="mapAdvancedMarker"
+            [position]="{ lat: markers.lat, lng: markers.lng }"
+            [content]="markers.content"
+          ></map-advanced-marker
+        ></google-map>
+        <div
+          class="alert alert-danger"
+          *ngIf="cinemaForm.get('location')?.errors"
+          style="
+            height: max-content;
+            min-height: 30px;
+            max-height: 100px;
+            margin-top: 3px;
+            padding-top: 4px;
+            padding-bottom: 0px;
+            overflow: none;
+            color: #666;
+          "
+        >
+          <p *ngIf="cinemaForm.get('location')?.getError('required')">
+            Please choose a location on the map.
+          </p>
+        </div>
+      </div>
+    </form>
+  </div>
+</div>
