vendor movie list done

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -14,5 +14,6 @@
 <!-- <app-admin-header></app-admin-header> -->
 <!-- <app-customer-header></app-customer-header> -->
 <app-vendor-header></app-vendor-header>
-<app-dashboard></app-dashboard>
+<!-- <app-dashboard></app-dashboard> -->
+ <app-vendor-movie-list></app-vendor-movie-list>
 <app-footer></app-footer>
