--- a/src/app/components/list/vendor-movie-list/vendor-movie-list.component.html
+++ b/src/app/components/list/vendor-movie-list/vendor-movie-list.component.html
@@ -1,3 +1,4 @@
-<p>
-  vendor-movie-list works!
-</p>
+<div class="vendor-list">
+  <h2>vendor list</h2>
+  <app-vendor-movie-list-item [showtime]="showList" [editList]="List"></app-vendor-movie-list-item>
+</div>
