--- a/src/app/components/list/seat-list/seat-list.component.html
+++ b/src/app/components/list/seat-list/seat-list.component.html
@@ -1,13 +1,72 @@
 <h4>ShowTimes</h4>
 <mat-form-field>
   <mat-label>Choose an option</mat-label>
-  <mat-select (selectionChange)="onOptionChange($event.value)">
-    <mat-option value="option1">12:30 PM</mat-option>
-    <mat-option value="option2">03:30 PM</mat-option>
-    <mat-option value="option3">07:00 PM</mat-option>
+  <mat-select  (selectionChange)="selectionChange($event.value)" >
+    <ng-container *ngFor="let showTime of showTimes;let i = index">
+       
+        <mat-option [value]="showTime">{{ showTime.showtime }}</mat-option>
+        
+    </ng-container>
   </mat-select>
 </mat-form-field>
 
-<ul>
-  <li *ngFor="let item of selectedArray">{{ item }}</li>
-</ul>
+<div class="seatListBody">
+
+    <div class="SeatCard">
+        <div class="status-legend">
+            
+            <div class="status-item">
+              <div class="status-box empty"></div>
+              <span>Empty</span>
+            </div>
+            <div class="status-item">
+              <div class="status-box occupied"></div>
+              <span>Occupied</span>
+            </div>
+            <div class="status-item">
+              <div class="status-box selected"></div>
+              <span>Selected</span>
+            </div>
+          </div>
+          <div class="cinema">
+            <div class="rowContainer">
+                <div class="row">
+                    <ng-container *ngFor="let seat of seats; let i = index">
+                        <ng-container *ngIf="i <= 12">
+                            <div class="seat">
+                                <app-seat  [seat]="seat" [showtime]="currentShowtime"></app-seat>
+                            </div>
+                        </ng-container>
+                    </ng-container>
+                </div>
+                <div class="row">
+                    <ng-container *ngFor="let seat of seats; let i = index">
+                        <ng-container *ngIf="i > 12 && i <= 25">
+                            <div class="seat">
+                                <app-seat  [seat]="seat" [showtime]="currentShowtime"></app-seat>
+                            </div>
+                        </ng-container>
+                    </ng-container>
+                </div>
+                <div class="row">
+                    <ng-container *ngFor="let seat of seats; let i = index">
+                        <ng-container *ngIf="i > 25 && i <= 38">
+                            <div class="seat">
+                                <app-seat  [seat]="seat" [showtime]="currentShowtime"></app-seat>
+                            </div>
+                        </ng-container>
+                    </ng-container>
+                </div>
+                <div class="row">
+                    <ng-container *ngFor="let seat of seats; let i = index">
+                        <ng-container *ngIf="i > 38 && i <= 47">
+                            <div class="seat">
+                                <app-seat  [seat]="seat" [showtime]="currentShowtime"></app-seat>
+                            </div>
+                        </ng-container>
+                    </ng-container>
+                </div>
+            </div>
+          </div>
+    </div>
+</div>
