--- a/src/app/components/seat/seat.component.css
+++ b/src/app/components/seat/seat.component.css
@@ -1,85 +1,12 @@
-body {
-    font-family: Arial, sans-serif;
-    margin: 0;
-    padding: 0;
-    height: 70vh;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    background: linear-gradient(to bottom right, #9d9dff, #1f1f41);
-    color: #fff;
-}
-
-.status-legend {
-    position: fixed;
-    top: 150px;
-    right: 10px;
-    display: flex;
-    gap: 20px;
-    z-index: 1100;
-    align-items: center;
-}
-
-/* Status item container */
-.status-item {
-    display: flex;
-    align-items: center;
-    gap: 5px;
-}
-
-.status-box {
-    width: 20px;
-    height: 20px;
-    border-radius: 4px;
-    border: 1px solid #333;
-}
-
-
-.status-box.empty {
-    background-color: #ffffff;
-
-}
-
-.status-box.occupied {
-    background-color: #5e5e5e;
-
-}
-
-.status-box.selected {
-    background-color: #00aeff;
-
-}
-
-.status-item span {
-    font-size: 14px;
-    font-weight: bold;
-    color: #000000;
-    font-family: Arial, sans-serif;
-}
-
-
-.cinema {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    background-color: #1f1f41;
-    padding: 20px;
-    border-radius: 15px;
-    box-shadow: 0 8px 15px rgba(0, 0, 0, 0.3);
-}
-
-
-.row {
-    display: flex;
-    justify-content: center;
-    margin-bottom: 10px;
-}
 
 
 .seat {
+    display: flex;
+    justify-content: center;
+    align-items: center;
     width: 40px;
     height: 40px;
-    margin: 5px;
+    color: var(--black);
     background-color: #ffffff;
     border: 1px solid #666;
     border-radius: 5px;
@@ -88,10 +15,49 @@ body {
 }
 
 .seat:hover {
-    background-color: #00aeff;
+    background-color: var(--light-blue);;
+    font-weight: 800;
     transform: scale(1.1);
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
 }
 
-.seat.selected {
-    background-color: #6c5ce7;
+.selected {
+    background-color: var(--light-blue);
+    color: var(--black);
+}
+
+
+
+.status-box.empty {
+    background-color: #ffffff;
+
+}
+
+.occupied , .occupied:hover{
+    background-color: #5e5e5e;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 40px;
+    height: 40px;
+    color: var(--black);
+    border: 1px solid #666;
+    border-radius: 5px;
+    cursor: not-allowed;
+
+}
+
+
+.status-box.selected {
+    background-color: #00aeff;
+
+}
+
+button{
+    background-color: transparent;
+    border: none;
+}
+p
+{
+    margin: 1rem 0;
 }
