--- a/src/app/components/seat/seat.component.html
+++ b/src/app/components/seat/seat.component.html
@@ -1,75 +1,8 @@
-<body>
+<button type="button" (click)="reserve(seat);" [disabled]="!seat.isFree && !userReservation.seatReserved.includes(seat.id)">
+    <div   class="seat" [ngClass]="{'selected': userReservation.seatReserved.includes(seat.id),
+        'occupied': !seat.isFree && !userReservation.seatReserved.includes(seat.id),
+    }" >
+        <p>{{seat.id}}</p>
+    </div>
+</button>
 
-  <div class="status-legend">
-    <div class="status-item">
-      <div class="status-box empty"></div>
-      <span>Empty</span>
-    </div>
-    <div class="status-item">
-      <div class="status-box occupied"></div>
-      <span>Occupied</span>
-    </div>
-    <div class="status-item">
-      <div class="status-box selected"></div>
-      <span>Selected</span>
-    </div>
-  </div>
-
-  <div class="cinema">
-    <div class="row">
-      <div class="seat" id="A1"></div>
-      <div class="seat" id="A2"></div>
-      <div class="seat" id="A3"></div>
-      <div class="seat" id="A4"></div>
-      <div class="seat" id="A5"></div>
-      <div class="seat" id="A6"></div>
-      <div class="seat" id="A7"></div>
-      <div class="seat" id="A8"></div>
-      <div class="seat" id="A9"></div>
-      <div class="seat" id="A10"></div>
-      <div class="seat" id="A11"></div>
-      <div class="seat" id="A12"></div>
-      <div class="seat" id="A13"></div>
-      <div class="seat" id="A14"></div>
-    </div>
-    <div class="row">
-      <div class="seat" id="B1"></div>
-      <div class="seat" id="B2"></div>
-      <div class="seat" id="B3"></div>
-      <div class="seat" id="B4"></div>
-      <div class="seat" id="B5"></div>
-      <div class="seat" id="B6"></div>
-      <div class="seat" id="B7"></div>
-      <div class="seat" id="B8"></div>
-      <div class="seat" id="B9"></div>
-      <div class="seat" id="B10"></div>
-      <div class="seat" id="B11"></div>
-      <div class="seat" id="B12"></div>
-      <div class="seat" id="B13"></div>
-      <div class="seat" id="B14"></div>
-    </div>
-    <div class="row">
-      <div class="seat" id="C1"></div>
-      <div class="seat" id="C2"></div>
-      <div class="seat" id="C3"></div>
-      <div class="seat" id="C4"></div>
-      <div class="seat" id="C5"></div>
-      <div class="seat" id="C6"></div>
-      <div class="seat" id="C7"></div>
-      <div class="seat" id="C8"></div>
-      <div class="seat" id="C9"></div>
-      <div class="seat" id="C10"></div>
-      <div class="seat" id="C11"></div>
-      <div class="seat" id="C12"></div>
-      <div class="seat" id="C13"></div>
-      <div class="seat" id="C14"></div>
-    </div>
-    <div class="row">
-      <div class="seat" id="D1"></div>
-      <div class="seat" id="D2"></div>
-      <div class="seat" id="D3"></div>
-      <div class="seat" id="D4"></div>
-      <div class="seat" id="D5"></div>
-    </div>
-  </div>
-</body>
