ticket component done

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -13,6 +13,7 @@
 <!-- <app-gust-header></app-gust-header> -->
 <!-- <app-admin-header></app-admin-header> -->
 <!-- <app-customer-header></app-customer-header> -->
-<app-vendor-header></app-vendor-header>
+<!-- <app-vendor-header></app-vendor-header>
 <app-dashboard></app-dashboard>
-<app-footer></app-footer>
+<app-footer></app-footer> -->
+<!-- <app-ticket></app-ticket> -->
