--- a/src/app/components/list/slideshow/slideshow.component.html
+++ b/src/app/components/list/slideshow/slideshow.component.html
@@ -1,3 +1,17 @@
-<p>
-  slideshow works!
-</p>
+<div id="Slideshow" class="carousel slide" data-bs-ride="carousel">
+  <div class="carousel-indicators">
+    <button *ngFor="let movie of movies; let i = index" type="button" [attr.data-bs-target]="'#Slideshow'" [attr.data-bs-slide-to]="i" [class.active]="i === 0"></button>
+  </div>
+  <div class="carousel-inner">
+    <div *ngFor="let movie of movies; let i = index" [class.active]="i === 0" class="carousel-item">
+      <img [src]="movie.image" class="d-block w-100">
+    </div>
+  </div>
+
+  <button class="carousel-control-prev" type="button" data-bs-target="#Slideshow" data-bs-slide="prev">
+    <span class="visually-hidden">Previous</span>
+  </button>
+  <button class="carousel-control-next" type="button" data-bs-target="#Slideshow" data-bs-slide="next">
+    <span class="visually-hidden">Next</span>
+  </button>
+</div>
