--- a/src/app/components/errors/NotAuthorized/NotAuthorized.component.html
+++ b/src/app/components/errors/NotAuthorized/NotAuthorized.component.html
@@ -1,3 +1,5 @@
-<p>
-  NotAuthorized works!
-</p>
+<div class="div">
+  <h1 class="h1">ERROR</h1>
+  <h1 class="h2">401</h1>
+  <h3 class="h3">UNAUTHOURIZED</h3>
+</div>
