--- a/src/app/components/errors/NotFound/NotFound.component.html
+++ b/src/app/components/errors/NotFound/NotFound.component.html
@@ -1,3 +1,5 @@
-<p>
-  NotFound works!
-</p>
+<div class="container-fluid div">
+  <h1 class="h1">ERROR</h1>
+  <h1 class="h2">404</h1>
+<h3 class="h3">PAGE NOT FOUND</h3>
+</div>
