user header take all width

--- a/src/app/components/list-item/user-list-item/user-list-item.component.html
+++ b/src/app/components/list-item/user-list-item/user-list-item.component.html
@@ -1,5 +1,4 @@
 <div class="container mt-4">
-    <h5 class="text-light">List</h5>
     <div class="list-group bg-light p-3 rounded">
       <!-- Header Row -->
       <div
@@ -8,7 +7,7 @@
       >
         <span>Name</span>
         <span>Phone</span>
-        <span>Number of Cinemas</span>
+        <span>No. of Cinemas</span>
         <span>Action</span>
       </div>
   
