--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -17,7 +17,7 @@
 <!-- <app-reservation-list></app-reservation-list> -->
 <!-- <app-feedback-list></app-feedback-list> -->
 <!-- <app-cinema-list></app-cinema-list> -->
-<!-- <app-users-list></app-users-list> -->
+<app-users-list></app-users-list>
 
 <!--<app-dashboard></app-dashboard>-->
 <!--<app-footer></app-footer>-->
