--- a/src/app/components/list-item/user-list-item/user-list-item.component.css
+++ b/src/app/components/list-item/user-list-item/user-list-item.component.css
@@ -1,10 +1,7 @@
 .container {
-    max-width: 800px;
+    max-width: 100vw;
   }
   
-  .container {
-    max-width: 800px;
-  }
   
   .list-group {
     border: none;
@@ -14,13 +11,13 @@
     display: grid; 
   grid-template-columns: 25% 25% 20% 30%; 
   align-items: center;
-  padding: 1px 20px;
+  /* padding: 1px 20px; */
   border: 1px solid transparent;
   margin-bottom: 10px;
   -webkit-box-flex: 1;
   -ms-flex: 1 1 auto;
   flex: 1 1 auto;
-  padding: 0.5rem 0.5rem;
+  padding: 0.5rem 1.1rem;
 }
 
     
