--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,8 +6,17 @@
 </div> -->
 
 <!-- <app-detailed-movieCard></app-detailed-movieCard> -->
-<app-login></app-login>
+<!-- <app-login></app-login> -->
  
-<app-signup></app-signup>
+<!-- <app-signup></app-signup> -->
 <!-- <app-feedback></app-feedback> -->
+
+
+<!-- <app-admin-header></app-admin-header> -->
+<!-- <app-gust-header></app-gust-header> -->
+<!-- <app-vendor-header></app-vendor-header> -->
+<!-- <app-customer-header></app-customer-header> -->
+<!-- <app-NotAuthorized></app-NotAuthorized> -->
+<app-NotFound></app-NotFound>
+<!-- <app-profile></app-profile> -->
 
