--- a/src/app/components/errors/NotFound/NotFound.component.css
+++ b/src/app/components/errors/NotFound/NotFound.component.css
@@ -1,34 +1,40 @@
 .div{
-    width: 100vw;
-    height: 100vh;
-    background-color: rgb(35, 12, 56);
-    position: relative;
+    width: 100%;
+    height: 100%;
+    /* background-color: rgb(35, 12, 56); */
+    /* position: relative; */
+    /* background-size: cover; */
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    align-items: center;
 }
-.img{
-    margin-left: 465px;
-    margin-top: 132px;
-}
+
 .h1{
-    position: absolute;
-    margin: 100px 580px; 
+    /* position: absolute; */
+    /* margin: 100px 577px;  */
+    margin-right: 140px;
     color: white;  
     font-weight: bold;
 }
+
 .h2{
-    position: absolute;
-    margin: 170px 494px; 
+    /* position: absolute; */
+    /* margin: 170px 494px;  */
     color: #ffd43a; 
     text-shadow: 5px 5px 0px #a78713 ,
-    -4px 0 12px rgba(246, 65, 155, 0.6), 
-    4px 0 12px rgba(246, 65, 155, 0.6);
+    -4px 0 12px rgba(228, 246, 65, 0.6), 
+    4px 0 12px rgba(228, 246, 65, 0.6);
     font-weight: bold;
     font-size: 120px;
     font-style: italic;
 }
+
 .h3{
-    position: absolute;
+    /* position: absolute; */
     color: white;  
-    margin-left: 544px;
-    margin-top: 250px;
+    margin-left: 240px;
+    /* margin-left: 544px; */
+    /* margin-top: 250px; */
     font-weight: bold;
 }
