--- a/src/app/components/list/movie-list/movie-list.component.html
+++ b/src/app/components/list/movie-list/movie-list.component.html
@@ -1,5 +1,5 @@
-<div class="list" >
-    <ng-container *ngFor="let movie of movies">
+<div class="list" style="margin-bottom: 20px">
+  <ng-container *ngFor="let movie of movies">
     <app-abstract-movieCard [movie]="movie"></app-abstract-movieCard>
-    </ng-container>
+  </ng-container>
 </div>
