headers fixed , profile under fixing

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -17,6 +17,6 @@
 <!-- <app-vendor-header></app-vendor-header> -->
 <!-- <app-customer-header></app-customer-header> -->
 <!-- <app-NotAuthorized></app-NotAuthorized> -->
-<app-NotFound></app-NotFound>
-<!-- <app-profile></app-profile> -->
+<!-- <app-NotFound></app-NotFound> -->
+<app-profile></app-profile>
 
