--- a/src/app/components/header/admin-header/admin-header.component.html
+++ b/src/app/components/header/admin-header/admin-header.component.html
@@ -13,7 +13,7 @@
             <span>FAQ</span>
         </button>
         <button class='mybutton myspn' mat-button color="basic">
-            <span>Feedback</span>
+            <span>Feedback List</span>
         </button>
     </div>
     <div>
