--- a/src/app/components/header/customer-header/customer-header.component.css
+++ b/src/app/components/header/customer-header/customer-header.component.css
@@ -45,7 +45,10 @@ mat-sidenav-content
     margin-right: 65px;
 }
 .link{
-    margin-left: 55px;
+    /* margin-left: 55px; */
+    display: flex;
+    justify-content: center;
+    align-items: center;
     text-decoration: none;
     color: black;
 }
