--- a/src/app/components/profile/profile.component.css
+++ b/src/app/components/profile/profile.component.css
@@ -1,8 +1,11 @@
 .container-fluid{
-    padding-top: 70px;
-    height: 100vh;
-    width: 100vw;
-    background-color:white ;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    /* padding-top: 70px; */
+    /* height: 100vh; */
+    /* width: 100vw; */
+    /* background-color:white ; */
 }
 /* *{
     background-color: black;
