--- a/src/app/pages/customer/list-movie-page/list-movie-page.component.css
+++ b/src/app/pages/customer/list-movie-page/list-movie-page.component.css
@@ -1,9 +1,9 @@
 .btn{
-  border-color: var(--secondary);
-  color: var(--secondary);
+  border-color: #212529;
+  color: #212529;
 }
 
 .btn:hover{
-  background-color: var(--secondary);
+  background-color: #212529;
   color: white;
 }
