--- a/src/app/components/profile/profile.component.css
+++ b/src/app/components/profile/profile.component.css
@@ -1,5 +1,6 @@
 .container-fluid{
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
     /* padding-top: 70px; */
