--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -15,9 +15,10 @@
 <!-- <app-customer-header></app-customer-header> --> <br><br><br>
 <!-- <app-vendor-header></app-vendor-header> -->
 <!-- <app-reservation-list></app-reservation-list> -->
-<!-- <app-feedback-list></app-feedback-list> -->
-<!-- <app-cinema-list></app-cinema-list> -->
-<!-- <app-users-list></app-users-list> -->
+<app-feedback-list></app-feedback-list>
+<app-cinema-list></app-cinema-list>
+<app-users-list></app-users-list>
+<!-- <app-movie-list></app-movie-list> -->
 
 <!--<app-dashboard></app-dashboard>-->
 <!--<app-footer></app-footer>-->
